config/manager/manager-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: controller-manager
  namespace: system
spec:
  podSelector:
    matchLabels:
      control-plane: argocd-operator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8081
        - protocol: TCP
          port: 9443
        - protocol: TCP
          port: 8080
  egress:
    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 6443
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
